# ShortRead

./: .Rinstignore  .gitignore  DESCRIPTION  NAMESPACE  NEWS  configure  configure.ac  issue-10.R
R/: AllClasses-Base.R  AllClasses-QA.R  AllClasses.R  AllGeneric.R  AllGenerics-Base.R  AllGenerics-QA.R  AllGenerics.R  AllUtilities.R  GappedReads-class.R  Snapshot.R  SnapshotFunction-helpers.R  SnapshotFunction.R  SpTrellis.R  filterFastq.R  methods-.QA.R  methods-.ShortReadBase.R  methods-AlignedDataFrame.R  methods-AlignedRead.R  methods-BAMQA.R  methods-BowtieQA.R  methods-ExperimentPath.R  methods-FastqFile.R  methods-FastqFileReader.R  methods-FastqQA.R  methods-FastqSampler.R  methods-FastqStreamer.R  methods-Intensity.R  methods-MAQMapQA.R  methods-Misc.R  methods-QA.R  methods-QualityScore.R  methods-RochePath.R  methods-RocheSet.R  methods-RtaIntensity.R  methods-SRError.R  methods-SRFilter.R  methods-SRFilterResult.R  methods-SRList.R  methods-SRSet.R  methods-SRVector.R  (+27 more)
data/: yeastChrI.rda
inst/: CITATION
man/: AlignedDataFrame-class.Rd  AlignedDataFrame.Rd  AlignedRead-class.Rd  AlignedRead.Rd  BAMQA-class.Rd  BowtieQA-class.Rd  ExperimentPath-class.Rd  FastqQA-class.Rd  GappedReads-class.Rd  Intensity-class.Rd  MAQMapQA-class.Rd  QA-class.Rd  QualityScore-class.Rd  QualityScore.Rd  RochePath-class.Rd  RocheSet-class.Rd  RtaIntensity-class.Rd  RtaIntensity.Rd  SRFilter-class.Rd  SRFilterResult-class.Rd  SRSet-class.Rd  SRUtil-class.Rd  Sampler-class.Rd  ShortRead-class.Rd  ShortRead-deprecated.Rd  ShortRead-package.Rd  ShortReadIntensity-class.Rd  (+44 more)
(+134 files in other folders)
